--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
 .logo img {
      height: 90px; 
      padding: 5px;
+     margin-top: 8px; 
      width: 150px;
      object-fit: cover;
      background-repeat: no-repeat;
@@ -530,6 +531,26 @@ float: left;
     padding: 5px 15px; 
     float: left; 
 }
+/* Scroll "Back to Top" Button Style */
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 150px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #E5584C; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #0D1D21; /* Add a dark-grey background on hover */
+  }
 /* Footer Styles */
 .footer {
     background-color: #0D1D21;
