Updating CSS for Nav & Footer

--- a/css/index.css
+++ b/css/index.css
@@ -566,7 +566,7 @@ float: left;
   }
 /* Footer Styles */
 .footer {
-    background-color: #0D1D21;
+    background-color: #709189;
     position: fixed;
     bottom: 0;  
     width: 100vw; 
