--- a/css/index.css
+++ b/css/index.css
@@ -112,10 +112,12 @@ body {
 }
 .title {
     font-family: 'Sen', sans-serif;
-    font-size: 36px;
+    font-size: 45px;
+    text-shadow: 2px 2px #000000;
     font-weight: bolder;
     color: #DC423C;
-    padding: 0px 15px; 
+    padding: 0px 0px; 
+    position: relative;
 }
 .content p {
     padding: 0px 15px; 
@@ -129,7 +131,7 @@ body {
 }
 .wrapper1 p {
     padding: 0px 15px; 
-    font-family: "PT Sans";
+    font-family: 'PT Sans';
     font-style: normal;
     font-size: 20px;
     color: #3A7673;
@@ -140,18 +142,33 @@ body {
     height: 50%; 
 }
 .smallerImages img {
-    height: 150px; 
+    height: 115px; 
     padding: 10px;
     width: 50%;
     background-repeat: no-repeat;
     object-fit: cover;
     border-radius: 18px;
     float: left; 
+    box-shadow:
+        0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
+      min-height: 25px;
+      width: 25vw;
+      margin: 25px auto;
+      background: white;
+      border-radius: 2px;
 }
 .caption {
     display: block; 
     background-color: #ECC19B; 
-    padding: 10px; 
+    padding: 5px; 
+    font-family: 'PT Sans';
+    font-weight: bold;
+    font-size: 14px;
 }
 .userFlow, .DOEGroup, .siteMap, .styleGuide {
     vertical-align: top; 
@@ -179,6 +196,16 @@ body {
 .codingSkillz {
     flex: 4;
     margin-right: 20px;
+}
+.title2 {
+    font-family: 'Sen', sans-serif;
+    font-size: 45px;
+    text-shadow: 2px 2px #000000;
+    font-weight: bolder;
+    color: #DC423C;
+    padding: 0px 0px; 
+    position: relative;
+    margin-left: auto;
 }
 table {
     border-collapse: separate;
@@ -408,6 +435,16 @@ float: left;
 * {
     box-sizing: border-box;
 }
+.takeovertheworld .title3 {
+    font-family: 'Sen', sans-serif;
+    font-size: 45px;
+    text-shadow: 2px 2px #000000;
+    font-weight: bolder;
+    color: #DC423C;
+    padding: 0px 0px; 
+    position: relative;
+    margin-right: 0px 0px 0px 0px;
+}
 .takeovertheworld {
     margin-left: -5px;
     margin-right: -5px;
@@ -567,7 +604,7 @@ float: left;
 /* Footer Styles */
 .footer {
     background-color: #709189;
-    position: fixed;
+    position: relative;
     bottom: 0;  
     width: 100vw; 
     left: 50%; 
@@ -613,32 +650,40 @@ float: left;
 }
 .GitHub { 
     position: absolute; 
-    bottom: 20px; 
+    bottom: 40px; 
     right: 150px; 
 }
 .LinkedIn {
     position: absolute; 
-    bottom: 20px; 
+    bottom: 40px; 
     right: 80px; 
 }
 .FaceBook {
     position: absolute; 
-    bottom: 20px; 
+    bottom: 40px; 
     right: 10px; 
 }
 #copyright {
     position: absolute; 
-    bottom: 5px; 
+    bottom: 10px; 
     right: 5px; 
+    font-size: 12px;
 }
 .links {
     color: white;
+    font-size: 18px;
 }
 .textLinks {
-    padding: 0px 10px 0px 0px; 
-    position: fixed; 
+    padding: 0px 0px; 
+    position: absolute; 
     left: 200px; 
-    bottom: 60px; 
+    bottom: 50px; 
+}
+.fa-envelope {
+    margin: 5px;
+}
+.fa-phone-alt {
+    margin: 5px;
 }
 /* For mobile phones: */
 [class*="col-"] {
